--- a/views/novoprojeto.ejs
+++ b/views/novoprojeto.ejs
@@ -25,7 +25,24 @@
         </div>
     </header>
     <main>
-        
+        <div class="pagina">
+            <h1>Crie um novo projeto</h1><br/>
+            <p>Adicione um projeto e depois poderá incrementar os serviços</p>
+            <form action="" class="formulario">
+                <label>Nome do projeto:</label> 
+                <input type="text" name="nomeProjeto" placeholder="Insira o nome" />
+                <label>Orçamento do projeto: </label> 
+                <input type="number" name="orcamento" placeholder="Insira o orçamento" />
+                <label> Selecione a categoria: </label>
+                <select>
+                    <option>Selecione uma opção</option>
+                    <option>Investimento</option>
+                    <option>Planejamento</option>
+                </select>
+                <button type="submit" class="botaoProjeto">Criar Projeto</button>
+            </form>
+        </div>
+       
     </main>
     <footer class="rodape">
         <h1>Capital Cash</h1>
